sort.basic.bubble.AlgBubbleSort2.scala.code
def bubbleSort2() {

  

    for(j<-0 to i){
      if(isSmaller(j+1,j)){
        swap(j,j+1);
      }
    }
  }
